--- a/styles/style-home.css
+++ b/styles/style-home.css
@@ -11,7 +11,7 @@ header {
 
 nav {
   position: absolute;
-  top: 100px;
+  top: 110px;
   right: 0;
 }
 
@@ -33,49 +33,57 @@ nav a:hover {
   text-decoration: underline;
 }
 
-.produtos {
-  margin: 0 auto;
-  width: 940px;
-  padding: 50px 0;
+.principal {
+  background: #cccccc;
+  padding: 30px;
 }
 
-.produtos li {
-  box-sizing: border-box;
-  border: 2px solid #000000;
-  border-radius: 10px;
-  display: inline-block;
-  margin: 0 1.5%;
-  padding: 30px 20px;
+.banner {
+  width: 100%;
+}
+
+.titulo-centralizado {
   text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+.missao {
+  font-size: 20px;
+}
+
+em {
+  font-style: italic;
+}
+
+strong {
+  font-weight: bold;
+}
+
+em strong {
+  color: #ff0000;
+}
+
+.beneficios {
+  background: #ffffff;
+  padding: 20px;
+}
+
+.beneficios ul {
+  display: inline-block;
   vertical-align: top;
-  width: 30%;
+  width: 20%;
+  margin-right: 15%;
 }
 
-.produtos li:hover {
-  border-color: #c78c19;
+.itens {
+  font-style: italic;
 }
 
-.produtos li:active {
-  border-color: #088c19;
-}
-
-.produtos h2 {
-  font-size: 30px;
-  font-weight: bold;
-}
-
-.produtos li:hover h2 {
-  font-size: 34px;
-}
-
-.produto-descricao {
-  font-size: 18px;
-}
-
-.produto-preco {
-  font-size: 22px;
-  font-weight: bold;
-  margin: 15px 0 0;
+.imagem-beneficios {
+  width: 50%;
 }
 
 footer {
