--- a/styles/style.css
+++ b/styles/style.css
@@ -115,3 +115,21 @@ form label, form legend {
 .checkbox {
   margin: 20px 0px;
 }
+
+.enviar {
+  padding: 15px 0px;
+  width: 40%;
+  color: #ffffff;
+  background: #ffa500;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.enviar:hover {
+  background: #ff8c00;
+  transform: scale(1.2);
+  transition: 1s all;
+}
