--- a/styles/style.css
+++ b/styles/style.css
@@ -133,3 +133,22 @@ form label, form legend {
   transform: scale(1.2);
   transition: 1s all;
 }
+
+table {
+  margin: 20px 0 40px;
+}
+
+thead {
+  background: #555555;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+td, th {
+  border: 1px solid #000000;
+  padding: 8px 15px;
+}
+
+td[colspan] {
+  text-align: center;
+}
