--- a/styles/style.css
+++ b/styles/style.css
@@ -97,8 +97,7 @@ footer {
 }
 
 main {
-  width: 940px;
-  margin: 0 auto;
+  
 }
 
 form {
@@ -172,10 +171,11 @@ td[colspan] {
   clear: left;
 }
 
-.utensilios {
-  width: 120px;
-  float: left;
-  margin: 0 20px 20px 0;
+.principal {
+  padding: 3em 0;
+  background: #fefefe;
+  width: 940px;
+  margin: 0 auto;
 }
 
 .principal p {
@@ -190,6 +190,57 @@ td[colspan] {
   font-weight: italic;
 }
 
+.utensilios {
+  width: 120px;
+  float: left;
+  margin: 0 20px 20px 0;
+}
+
+.mapa-conteudo {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.mapa {
+  padding: 3em 0;
+  background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p {
+  margin: 0 0 2em;
+  text-align: center;
+}
+
+.beneficios {
+  padding: 3em 0;
+  background: #888888;
+}
+
+.conteudo-beneficios {
+  width: 640px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.lista-beneficios {
+  width: 40%;
+}
+
+.itens {
+  line-height: 1.5em;
+}
+
+.itens:first-child {
+  font-weight: bold;
+}
+
 .imagem-beneficios {
   width: 60%;
+}
+
+.video {
+  width: 560px;
+  margin: 2em auto;
 }
