--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,7 @@ nav a:hover {
 
 .produtos li:hover {
   border-color: #c78c19;
+  transform: scale(1.1);
 }
 
 .produtos li:active {
@@ -68,10 +69,6 @@ nav a:hover {
 .produtos h2 {
   font-size: 30px;
   font-weight: bold;
-}
-
-.produtos li:hover h2 {
-  font-size: 34px;
 }
 
 .produto-descricao {
@@ -94,10 +91,6 @@ footer {
   color: #ffffff;
   font-size: 13px;
   margin-top: 20px;
-}
-
-main {
-  
 }
 
 form {
@@ -234,6 +227,10 @@ td[colspan] {
 
 .itens:first-child {
   font-weight: bold;
+}
+
+.itens::before {
+  content: "🟊";
 }
 
 .imagem-beneficios {
